[package]
name = "media-player"
version = "0.1.0"
authors = ["Lucy <lucy@absolucy.moe>"]
edition = "2024"
license = "Zlib"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
	"Window",
	"Document",
	"HtmlAudioElement",
	"AudioContext",
	"PannerNode",
	"PanningModelType",
	"MediaElementAudioSourceNode",
	"AudioNode",
	"AudioParam",
	"PannerOptions",
	"DistanceModelType",
	"AudioDestinationNode",
] }
wasm-bindgen-futures = "0.4"
console_log = { version = "1", features = ["color"] }
log = "0.4"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = "thin"
